--- a/countdown.html
+++ b/countdown.html
@@ -4,7 +4,7 @@
   html5up.net | @ajlkn
   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<!--<html>
+<html>
   <head>
       <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,9 +20,7 @@
 
       <header id="header">
         <div class="inner">
-          <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-          <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
-          <br />
+          <h1>Countdown</h1>
 
           </h1>
         </div>
@@ -46,7 +44,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Sep 26, 2022 23:59:00").getTime();
+var countDownDate = new Date("Dec 15, 2024 12:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -59,7 +57,7 @@ var now = new Date().getTime();
     
   // Time calculations for days, hours, minutes and seconds
   var distance1 = Math.floor(distance / (1000))
-  var percentage = (1 - (distance1/997200))*100
+  var percentage = (1 - (distance1/969300))*100
   var pvalue = percentage.toFixed(0)-1
   var percentage = percentage.toFixed(4)
   
@@ -81,7 +79,7 @@ var i = pvalue;
       <footer id="footer">
         <div class="inner">
           <ul class="icons">
-            <li><a href="https://twitter.com/hanna_schmueck" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+            
             <li><a href="https://github.com/hannaschmueck" class="icon brands fa-github"><span class="label">Github</span></a></li>
             <li><a href="mailto:h.schmueck@lancaster.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
           </ul>
@@ -100,4 +98,4 @@ var i = pvalue;
 
   </body>
 </html>
--->
+
