--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
                     alt="" /></a>
-            <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br />
+            <h1><strong>Research Associate | The University of Glasgow <br/>Doctoral Candidate and Associate Lecturer | Lancaster University </strong><br />
                 <br /> </h1>
         </div>
     </header> <!-- Main -->
@@ -32,19 +32,25 @@
             </header>
 
           
-            <p> I'm a PhD student, research assistant and associate lecturer at Lancaster University. I greatly enjoy
+            <p> I'm a Research Associate at the University of Glasgow working on the linguistic and data visualisation outputs of the <a href="https://OHOS.ac.uk/">OHOS</a> Project. I am also a Doctoral Candidate, Research Assistant, and Associate Lecturer at Lancaster University. I greatly enjoy
                 all things corpus linguistics, psycholinguistics, and data visualisation. The main aim of my work is to
                 develop new, explainable methodologies and workflows so we can analyse (existing) linguistic data in new
                 ways and further our understanding of language and the mind. Have a look at my research/projects, <a
                     href="https://hannaschmueck.github.io/publications" target="_blank">publications</a>, learn more
-                about me, or get in touch.
+                about me, and feel free to get in touch if you want to explore possible collaborations.
         </section>
         <hr class="rounded">
+
+        <h2>Current Role at the University of Glasgow </h2>
+        <div class="rounded-box"><b>Research Associate - Information Studies, School of Humanities</b></div> 
+          <p><span class="image left"><img src="images/fulls/OHOS.jpg" alt="" /></span>
+            The project I am working on, <i>Our Heritage, Our Stories</i>, is a Discovery Research Project funded by the Arts and Humanities Research Council, as part of the Towards a National Collection programme. It aims to  to make community-generated digital content from a large number of different community archives more linkable, searchable, and to make it available alongside custodial resources like The National Archive. My main research area within this project is identifying how corpus linguists can benefit from the rich resources found in community archives and how language can be valued and appreciated as a heritage object. I have also created the visualisation outputs (named entity networks) for the project. These can be found <a href="https://ohos.ac.uk/datasets-and-software/">here</a>. </p>
         <h2>Projects and Experience at Lancaster University </h2>
-        <p><span class="image left"><img src="images/fulls/teaching.jpg" alt="" /></span>
+        <p>
         <ul class="alt">
             <li>
-              <div class="rounded-box"><b>Teaching - Undergraduate Modules</b></div> 
+              <div class="rounded-box"><b>Teaching - Undergraduate Modules</b></div>
+              <span class="image right"><img src="images/fulls/teaching.jpg" alt="" /></span>
               I have been teaching several modules at <a
                     href="https://www.lancaster.ac.uk/linguistics/about/people/hanna-schmueck" target="_blank">Lancaster
                     University</a> since 2020. Modules I have taught so far include LING228 (Child Language
@@ -52,7 +58,9 @@
             <li><div class="rounded-box">
               <b>Teaching - MOOC</b>
           </div> 
-          I have been deputy lead / lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course for multiple years now. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020. <span class="image right"><img src="images/fulls/MOOC.jpg"alt="" /></span> </li> 
+          <span class="image right"><img src="images/fulls/MOOC.jpg"alt="" /></span>
+          I have been deputy lead / lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course for multiple years now. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020. 
+          </li> 
           <div class="rounded-box"><b>Teaching - Autumn School in Corpus Linguistics</b></div> I am currently teaching a 13 week autumn school for academics hoping to further their corpus linguistic skills and professional development at Lancaster University.
             <li><div class="rounded-box"><b>Mentoring - Methods North West</b></div> I was working as a mentor for research students as
                 part of a <a href="https://twitter.com/MethodsNW/status/1569264899808972800" target="_blank">Methods NW
@@ -62,15 +70,17 @@
                 academics programming skills (R/Python). In this role, I design a curriculum around the researchers'
                 individual project aims, set challenges, and cooperate with them to find efficient, robust,
                 interpretable, and easily replicable solutions.
-            <li> <div class="rounded-box"><b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b></div>I have
-                been helping with the <a href="http://wp.lancs.ac.uk/corpussummerschools/" target="_blank">Lancaster
+            <li> <div class="rounded-box"><b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b></div>
+              I have been helping with the <a href="http://wp.lancs.ac.uk/corpussummerschools/" target="_blank">Lancaster
                     Summer Schools in Corpus Linguistics</a> since 2020. This has involved both teaching Q&A sessions
                 as well as helping with the technology behind the scenes (setting up and recording Teams live events,
-                monitoring the chat, operating the presentations etc.). </li> <span class="image left"><img
-                    src="images/fulls/BNC.jpg" alt="" /></span>
-            <li><div class="rounded-box"><b>Research Assistant Roles - BNC Assistant</b></div>I worked on preprocessing and data cleaning
-                of the <a href="https://www.degruyter.com/document/doi/10.1515/text-2020-0052/html?lang=en"
-                    target="_blank">British National Corpus 2014</a> from 2020 to its publication in late 2021. </li>
+                monitoring the chat, operating the presentations etc.). </li> 
+                
+            <li><div class="rounded-box"><b>Research Assistant Roles - BNC Assistant</b></div>
+
+              <span class="image right"><img src="images/fulls/BNC.jpg" alt="" /></span>
+              I worked on preprocessing and data cleaning
+                of the <a href="https://www.degruyter.com/document/doi/10.1515/text-2020-0052/html?lang=en" target="_blank">British National Corpus 2014</a> from 2020 to its publication in late 2021. <br/><br/><br/><br/></li>
             <li><div class="rounded-box"><b>Research Assistant Roles - Data Processing</b></div>I worked on a syntactic coding project
                 doing data cleaning and advanced preprocessing in 2022. </li>
             <li><div class="rounded-box"><b>Research Assistant Roles - Manual Coding</b></div>I started working on a project
@@ -102,20 +112,20 @@
             <li><div class="rounded-box"><b>Technical Assistant Roles - BNC launch event</b> </div>I helped with the live stream and
                 onsite organisation of the <a
                     href="http://cass.lancs.ac.uk/celebrating-the-written-bnc2014-lancaster-castle-event/">BNC launch
-                    event</a> (over 1,200 participants) in 2021. </li> <span class="image right"><img
-                    src="images/fulls/LAEL.jpg" alt="" /></span>
+                    event</a> (over 1,200 participants) in 2021. </li>
             <li><div class="rounded-box"><b>Technical Assistant Roles - CHIMED-3 </b></div>I helped with the live stream and onsite
                 organisation of the <a href="https://wp.lancs.ac.uk/chimed-3/"> CHIMED-3 </a> conference in 2023. </li>
-            <li><div class="rounded-box"><b>Volunteering - Postgraduate Liaison of the LAEL Society</b></div>I was the postgraduate
+            <li><div class="rounded-box"><b>Volunteering - Postgraduate Liaison of the LAEL Society</b></div><span class="image right"><img
+              src="images/fulls/LAEL.jpg" alt="" /></span>I was the postgraduate
                 liaision of the <a href="https://twitter.com/laelsociety">LAEL Society</a> from 02/2020 to 06/2022.
             </li>
             </p>
             <hr class="rounded">
             <h2>Independent Projects and Experience </h2>
-            <p><span class="image left"><img src="images/fulls/COMPILE.jpg" alt="" /></span>
-                <li><div class="rounded-box"><b>COMPILE Learning - Open Access Programming Skills Development</b></div> I coordinate the
+            <p>
+                <li><div class="rounded-box"><b>COMPILE Learning - Open Access Programming Skills Development</b></div> <span class="image right"><img src="images/fulls/COMPILE.jpg" alt="" /></span>I coordinate the
                     Lancaster branch of <a href="https://www.compilelearning.co.uk" target="_blank">COMPILE</a> and
-                    teach select pyhton and regex lectures. </li></br>
+                    teach select pyhton and regex lectures. <br/><br/><br/><br/><br/></li>
                 <li><div class="rounded-box"><b>Lone Wolf Networks</b></div></li>A research project looking at discourses surrounding lone
                     wolf terrorism using network visualisations. </li>
             </p>
@@ -227,7 +237,7 @@
                         network and exploring network cliques which is useful for lexicography (Gablasova et al.,
                         2017; Simpson-Vlach & Ellis, 2010) and researching language change (Chen et al., 2018).</p>
                     </div>
-                  </br></br></br>
+                  </br>
                 <h4>CL2023 - 03.-06.07.2023, Lancaster, UK</h4>
                 <p> <span class="image right"><img src="images/fulls/CL2023.jpg" alt="CL2023 talk" /></span> </br> At
                     CL2023 I presented two papers: <i>Two approaches to collocation networks: GraphColl and LLN </i>
@@ -501,6 +511,7 @@
                       - Corpus Linguistics: Interlocking Corpora and Register(s): Diversity and Innovation. 28-22 June 2024</li>
                       <li>UCREL NLP Summer School 2024 - 24-26 July 2024</li>
                       <li>Towards a National Collection Conference - 20-21 November 2024</li>
+                      <li>BEYOND conference - 25-27 November 2024</li>
 
                 </ul>
                 <hr class="rounded">
