--- a/nexvision.html
+++ b/nexvision.html
@@ -16,10 +16,7 @@
     <!-- Header -->
       <header id="header">
         <div class="inner">
-          <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-          <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
-          <br />
-
+          <h1> NexVision Visualisations
           </h1>
         </div>
       </header>
