--- a/publications.html
+++ b/publications.html
@@ -18,15 +18,14 @@
   </head>
   <body class="is-preload">
 
-      <header id="header">
-        <div class="inner">
-          <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-          <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
-          <br />
-
-          </h1>
-        </div>
-      </header>
+<!-- Header -->
+<header id="header">
+  <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
+              alt="" /></a>
+      <h1><strong>Research Associate | The University of Glasgow <br/>Doctoral Candidate and Associate Lecturer | Lancaster University </strong><br />
+          <br /> </h1>
+  </div>
+</header> <!-- Main -->
 
       <div id="main">
         <section id="one">
@@ -52,8 +51,9 @@
 
           <h2>Journal Articles</h2>
           <div class="apa">Schmück, H & Malone, D. A pack of lone wolves: An analysis of lone wolf terrorism discourses in the British Press. Corpora. [under review]</div>
-          <div class="apa">Schmück, H & Brezina, V. Collocations in More context: A new approach to collocation network generation. IJCL. [under review] </br></br></div>
-          
+          <div class="apa">Schmück, H & Brezina, V. Collocations in More context: A new approach to collocation network generation. IJCL. [under review] </div>
+          <div class="apa">Schmück, H. Review of Buschfeld, Ronan, Neumaier, Weilinghoff & Westermayer (2023): Crossing Boundaries Through Corpora: Innovative corpus approaches within and beyond linguistics. In English Language & Linguistics. Cambridge University Press. [in prep] <br><br></div>
+
           <h2>Book Chapters</h2>
           <div class="apa">Brezina, V & Schmück, H. Corpus Linguistics and Learner Corpus Studies. In Nesi, H & Milin, P (Eds.) International Encyclopedia of Language and Linguistics (3rd ed.). Elsevier. [accepted; under review]</div>
           
