--- a/publications.html
+++ b/publications.html
@@ -68,18 +68,23 @@
 
          
 
+      </div> <!-- Footer -->
       <footer id="footer">
-        <div class="inner">
-          <ul class="icons">
-            <div class="apa"><a href="https://twitter.com/hanna_schmueck" class="icon brands fa-twitter"><span class="label">Twitter</span></a></div>
-            <div class="apa"><a href="https://github.com/hannaschmueck" class="icon brands fa-github"><span class="label">Github</span></a></div>
-            <div class="apa"><a href="mailto:h.schmueck@lancaster.ac.uk" class="icon solid fa-envelope"><span class="label">Email</span></a></div>
-          </ul>
-          <ul class="copyright">
-            <div class="apa">&copy; Hanna Schmück</div><div class="apa">Design: <a href="http://html5up.net">HTML5 UP</a></div>
-          </ul>
-        </div>
-      </footer>
+          <div class="inner">
+              <ul class="icons">
+                  <li><a href="https://twitter.com/hanna_schmueck" class="icon brands fa-twitter"><span
+                              class="label">Twitter</span></a></li>
+                  <li><a href="https://github.com/hannaschmueck" class="icon brands fa-github"><span
+                              class="label">Github</span></a></li>
+                  <li><a href="mailto:h.schmueck@lancaster.ac.uk" class="icon solid fa-envelope"><span
+                              class="label">Email</span></a></li>
+              </ul>
+              <ul class="copyright">
+                  <li>&copy; Hanna Schmück</li>
+                  <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              </ul>
+          </div>
+      </footer> <!-- Scripts -->
 
       <script src="assets/js/jquery.min.js"></script>
       <script src="assets/js/jquery.poptrox.min.js"></script>
