--- a/countdown.html
+++ b/countdown.html
@@ -1,9 +1,9 @@
-<!DOCTYPE HTML>
-<!--
+<!--<!DOCTYPE HTML>
+
   Strata by HTML5 UP
   html5up.net | @ajlkn
   Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
   <head>
       <meta charset="utf-8">
@@ -100,3 +100,4 @@ var i = pvalue;
   </body>
 </html>
 
+-->
