--- a/OHOS/Cardiff_demo_colourbywikilink.html
+++ b/OHOS/Cardiff_demo_colourbywikilink.html
@@ -33,8 +33,8 @@
 <body>
   
   <div id="3d-graph"></div>
-  <a href="https://ohos.com" target="_blank" style="pointer-events: auto;">
-  <img id="ohos-logo" src="../logo/OHOS.png" width="70" height="70" style="position: absolute; top: 0; left: 0; opacity: 0.5;">
+  <a href="https://ohos.ac.uk" target="_blank" style="pointer-events: auto;">
+  <img id="ohos-logo" src="../datasets/OHOS/logo/OHOS.png" width="70" height="70">
 </a>
 <div id="overlay">This network shows the demo network with entites that have a wikilink coloured red and others blue.</div>
   <script>
