all updated, correct names

--- a/OHOS.html
+++ b/OHOS.html
@@ -52,6 +52,13 @@
 </h2>
 <a href="https://hannaschmueck.github.io/OHOS/Cardiff_demo_colourbywikilink.html">3D Network visualisation</a>
 </br></br>
+
+<h2>
+  Subsection of Sample Dataset - just events, people, and organisations - colour-coded by entity type - size by frequency of occurrence in the dataset.
+</h2>
+<a href="https://hannaschmueck.github.io/OHOS/Cardiff_demo_size.html">3D Network visualisation</a>
+</br></br>
+
 <hr>
   <h2>
     Moloney NI Archive Network
