--- a/OHOS/Cardiff_demo_colourbywikilink.html
+++ b/OHOS/Cardiff_demo_colourbywikilink.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PCW_colourbytype</title>
+  <title>Cardiff - demo -size by frequency </title>
   <style> body { margin: 0; } 
 #ohos-logo {
   position: absolute;
@@ -63,7 +63,7 @@
           const sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
           group.add(sphere);
 
-          if (node.frequency>10) {
+          if (node.frequency>5) {
             const textGeometry = new THREE.TextGeometry(node.name, {
               font: font,
               size: 5,
