--- a/OHOS/Cardiff_demo_subset.html
+++ b/OHOS/Cardiff_demo_subset.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="../datasets/OHOS/logo/OHOS.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PCW demo - subset - wikilinks</title>
+  <title>Cardiff demo - subset - wikilinks</title>
   <style> body { margin: 0; } 
 #ohos-logo {
   position: absolute;
