--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
                     alt="" /></a>
-            <h1><strong>Research Associate | The University of Glasgow <br/>Doctoral Candidate and Associate Lecturer | Lancaster University </strong><br />
+            <h1><strong>Research Associate | The University of Augsburg </strong><br />
                 <br /> </h1>
         </div>
     </header> <!-- Main -->
@@ -32,12 +32,14 @@
             </header>
 
           
-            <p> I'm a Research Associate at the University of Glasgow working on the linguistic and data visualisation outputs of the <a href="https://OHOS.ac.uk/">OHOS</a> Project. I am also a Doctoral Candidate, Research Assistant, and Associate Lecturer at Lancaster University. I greatly enjoy
-                all things corpus linguistics, psycholinguistics, and data visualisation. The main aim of my work is to
+            <p> I'm a Research Associate at the University of Augsburg.
+                Until recently, I was a a Research Associate at the University of Glasgow where I was working on the linguistic and data visualisation outputs of the <a href="https://OHOS.ac.uk/">OHOS</a> Project. I was also a Research Assistant and Associate Lecturer at Lancaster University where I did my PhD. I greatly enjoy
+                all things corpus linguistics, computational linguistics, and data visualisation. The main aim of my work is to
                 develop new, explainable methodologies and workflows so we can analyse (existing) linguistic data in new
-                ways and further our understanding of language and the mind. Have a look at my research/projects, <a
+                ways and further our understanding of language and the mind. I also greatly enjoy working with data from the heritage sector and exploring the concept of language as heritage.
+                Have a look at my research/projects, <a
                     href="https://hannaschmueck.github.io/publications" target="_blank">publications</a>, learn more
-                about me, and feel free to get in touch if you want to explore possible collaborations.
+                about what I get up to, and feel free to get in touch if you want to explore possible collaborations.
         </section>
         <hr class="rounded">
 
@@ -905,8 +907,8 @@
                 -->
             <!-- Footer -->
             <section id="three">
-                <p> I am a Klaus Murmann Doctoral Fellow at Stiftung der deutschen Wirtschaft gGmbH (Foundation of
-                    German Business/ UK regional group) and a winner of the Geoffrey Leech Outstanding MA Student Award
+                <p> I was a Klaus Murmann Doctoral Fellow at Stiftung der deutschen Wirtschaft gGmbH (Foundation of
+                    German Business/ UK regional group) and a I am a winner of the Geoffrey Leech Outstanding MA Student Award
                     for my MA in Language and Linguistics.
             </section>
     </div> <!-- Footer -->
