--- a/publications.html
+++ b/publications.html
@@ -18,14 +18,13 @@
   </head>
   <body class="is-preload">
 
-<!-- Header -->
-<header id="header">
-  <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
-              alt="" /></a>
-      <h1><strong>Research Associate | The University of Glasgow <br/>Doctoral Candidate and Associate Lecturer | Lancaster University </strong><br />
-          <br /> </h1>
-  </div>
-</header> <!-- Main -->
+    <header id="header">
+        <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
+                    alt="" /></a>
+            <h1><strong>Research Associate | The University of Augsburg </strong><br />
+                <br /> </h1>
+        </div>
+    </header> <!-- Main -->
 
       <div id="main">
         <section id="one">
