--- a/index.html
+++ b/index.html
@@ -43,10 +43,17 @@
         </section>
         <hr class="rounded">
 
-        <h2>Current Role at the University of Glasgow </h2>
+
+         <h2>Current Role at the University of Augsburg </h2>
+        <div class="rounded-box"><b>Research Associate - Chair for Natural Language Understanding (Prof. Friedrich), Faculty of Applied Computer Science</b></div> 
+          <p>
+            I am a member of the <a href="https://hlt-augsburg.github.io"> HLT@Augsburg</a> group and work on a variety of projects.
+              I am also teaching the INF-0467: Seminar Natural Language Understanding module (UG + PG).
+        
+        <h2>Experience at the University of Glasgow </h2>
         <div class="rounded-box"><b>Research Associate - Information Studies, School of Humanities</b></div> 
           <p><span class="image left"><img src="images/fulls/OHOS.jpg" alt="" /></span>
-            The project I am working on, <i>Our Heritage, Our Stories</i>, is a Discovery Research Project funded by the Arts and Humanities Research Council, as part of the Towards a National Collection programme. It aims to  to make community-generated digital content from a large number of different community archives more linkable, searchable, and to make it available alongside custodial resources like The National Archive. My main research area within this project is identifying how corpus linguists can benefit from the rich resources found in community archives and how language can be valued and appreciated as a heritage object. I have also created the visualisation outputs (named entity networks) for the project. These can be found <a href="https://ohos.ac.uk/datasets-and-software/">here</a>. </p>
+            The project I was working on, <i>Our Heritage, Our Stories</i>, is a Discovery Research Project funded by the Arts and Humanities Research Council, as part of the Towards a National Collection programme. It aims to make community-generated digital content from a large number of different community archives more linkable, searchable, and to make it available alongside custodial resources like The National Archive. My main research area within this project is identifying how corpus linguists can benefit from the rich resources found in community archives and how language can be valued and appreciated as a heritage object. I have also created the visualisation outputs (named entity networks) for the project. These can be found <a href="https://ohos.ac.uk/datasets-and-software/">here</a>. </p>
         <h2>Projects and Experience at Lancaster University </h2>
         <p>
         <ul class="alt">
