--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
          <h2>Current Role at the University of Augsburg </h2>
         <div class="rounded-box"><b>Research Associate - Chair for Natural Language Understanding (Prof. Friedrich), Faculty of Applied Computer Science</b></div> 
-          <p>
+         <p><span class="image right"><img src="images/fulls/UniA.png" alt="" /></span>
             I am a member of the <a href="https://hlt-augsburg.github.io"> HLT@Augsburg</a> group and work on a variety of projects.
               I am also teaching the INF-0467: Seminar Natural Language Understanding module (UG + PG).
         
