--- a/OHOS.html
+++ b/OHOS.html
@@ -11,16 +11,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.7, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <body class="is-preload">
-    
-<!-- Header -->
-<header id="header">
-  <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
-              alt="" /></a>
-      <h1><strong>Research Associate | The University of Glasgow <br/>Doctoral Candidate and Associate Lecturer | Lancaster University </strong><br />
-          <br /> </h1>
-  </div>
-</header> <!-- Main -->
+ </head>
+
+
+<body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+        <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
+                    alt="" /></a>
+            <h1><strong>Research Associate | The University of Augsburg </strong><br />
+                <br /> </h1>
+        </div>
+    </header> <!-- Main -->
 
     <!-- Main -->
       <div id="main">
