--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         <div class="rounded-box"><b>Research Associate - Chair for Natural Language Understanding (Prof. Friedrich), Faculty of Applied Computer Science</b></div> 
          <p><span class="image right"><img src="images/fulls/UniA.png" alt="" /></span>
             I am a member of the <a href="https://hlt-augsburg.github.io"> HLT@Augsburg</a> group and work on a variety of projects.
-              I am also teaching the INF-0467: Seminar Natural Language Understanding module (UG + PG).
+               <br />I am also teaching the INF-0467: Seminar Natural Language Understanding module (UG + PG).
+              <br />
+              <br />
+              <br />
         
         <h2>Experience at the University of Glasgow </h2>
         <div class="rounded-box"><b>Research Associate - Information Studies, School of Humanities</b></div> 
