--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
          <h2>Current Role at the University of Augsburg </h2>
         <div class="rounded-box"><b>Research Associate - Chair for Natural Language Understanding (Prof. Friedrich), Faculty of Applied Computer Science</b></div> 
          <p><span class="image right"><img src="images/fulls/UniA.png" alt="" /></span>
-            I am a member of the <a href="https://hlt-augsburg.github.io"> HLT@Augsburg</a> group and work on a variety of projects.
+            I am a member of the <a href="https://hlt-augsburg.github.io"> HLT@Augsburg</a> group and work on a variety of projects, chiefly (from September 2025) on the <i>Computational Discourse Analysis and Processing across Languages and Time </i> project with <a href="https://annefried.github.io"> Prof. Annemarie Friedrich</a> and <a href="https://jakpra.github.io"> Dr. Jakob Prange</a>.
                <br />I am also teaching the INF-0467: Seminar Natural Language Understanding module (UG + PG).
-              <br />
               <br />
               <br />
         
