--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <div class="rounded-box"><b>Research Associate - Chair for Natural Language Understanding (Prof. Friedrich), Faculty of Applied CS</b></div> 
          <p><span class="image right"><img src="images/fulls/UniA.png" alt="" /></span>
             I am a member of the <a href="https://hlt-augsburg.github.io"> HLT@Augsburg</a> group and work on a variety of projects, chiefly (from September 2025) on the <i>Computational Discourse Analysis and Processing across Languages and Time </i> project with <a href="https://annefried.github.io"> Prof. Annemarie Friedrich</a> and <a href="https://jakpra.github.io"> Dr. Jakob Prange</a>.
+            As a Research Assistant on this DFG-funded project, I support research developing a computer-aided framework for analysing discourse modes in texts. I co-create annotation guidelines and diachronic corpora, contribute to corpus studies on grammatical structures in historical German texts and discourse patterns in English historiography, and assist with developing computational tools for analysis. Our work extends beyond traditional register-based approaches to examine how passage-level discourse features evolve over time.
+  
                <br />I am also teaching the INF-0467: Seminar Natural Language Understanding module (UG + PG).
-              <br />
-              <br />
         
         <h2>Experience at the University of Glasgow </h2>
         <div class="rounded-box"><b>Research Associate - Information Studies, School of Humanities</b></div> 
