maybe this works?

--- a/fun/wordcloud.html
+++ b/fun/wordcloud.html
@@ -77,7 +77,7 @@ function wordCloud(selector) {
 
 
 //Read the CSV file containing words and frequencies
-d3.csv("topics.csv", function(error, data) {
+d3.csv("https://hannaschmueck.github.io/fun/topics.csv", function(error, data) {
     if (error) {
         console.error(error);
         
