updated current work

--- a/index.html
+++ b/index.html
@@ -65,20 +65,20 @@
               I have been teaching several modules at <a
                     href="https://www.lancaster.ac.uk/linguistics/about/people/hanna-schmueck" target="_blank">Lancaster
                     University</a> since 2020. Modules I have taught so far include LING228 (Child Language
-                Acquisition), LING315 (Forensic Linguistics), and LING326 (Corpus Linguistics). I am currently teaching LING330 (Language, Cognition and Culture), LING324 (Cognitive Linguistics), and LING316 (Psycholinguistics). </li>
+                Acquisition), LING315 (Forensic Linguistics), LING326 (Corpus Linguistics), LING330 (Language, Cognition and Culture), LING324 (Cognitive Linguistics), and LING316 (Psycholinguistics). </li>
             <li><div class="rounded-box">
               <b>Teaching - MOOC</b>
           </div> 
           <span class="image right"><img src="images/fulls/MOOC.jpg"alt="" /></span>
           I have been deputy lead / lead mentor for Lancaster's <a href="https://www.futurelearn.com/courses/corpus-linguistics" target="_blank">"Corpus Linguistics - Method, Analysis, Interpretation"</a> online course for multiple years now. This course runs yearly, has multiple thousands of participants (at the time of writing a cumulative count of over 70,000) and I have been involved since 2020. 
           </li> 
-          <div class="rounded-box"><b>Teaching - Autumn School in Corpus Linguistics</b></div> I am currently teaching a 13 week autumn school for academics hoping to further their corpus linguistic skills and professional development at Lancaster University.
+          <div class="rounded-box"><b>Teaching - Autumn School in Corpus Linguistics</b></div> I was teaching a 13 week autumn school for academics hoping to further their corpus linguistic skills and professional development at Lancaster University.
             <li><div class="rounded-box"><b>Mentoring - Methods North West</b></div> I was working as a mentor for research students as
                 part of a <a href="https://twitter.com/MethodsNW/status/1569264899808972800" target="_blank">Methods NW
                     project</a> enabling interdisciplinary and interinstitutional research collaborations. My role
                 involved advising the researcher in methodological matters with regards to corpus linguistics.
-            <li><div class="rounded-box"><b>Mentoring - Coding Sessions</b></div> I am currently working as a mentor teaching other
-                academics programming skills (R/Python). In this role, I design a curriculum around the researchers'
+            <li><div class="rounded-box"><b>Mentoring - Coding Sessions</b></div> I was working as a mentor teaching other
+                academics programming skills (R/Python). In this role, I designed a curriculum around the researchers'
                 individual project aims, set challenges, and cooperate with them to find efficient, robust,
                 interpretable, and easily replicable solutions.
             <li> <div class="rounded-box"><b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b></div>
@@ -105,10 +105,10 @@
                     href="http://www.research.lancs.ac.uk/portal/en/upmprojects/construction-and-corpusbased-analysis-of-the-british-councillancaster-university-aptis-corpus(3ace9bdf-2dd1-4f72-b9d0-530670fcc2f7).html"
                     target="_blank">APTIS corpus</a>, mainly data processing, formatting and statistical analyses of
                 epistemic markers. </li>
-            <li><div class="rounded-box"><b>Research Assistant Roles - LANA Corpus Processing</b></div>I currently work on the the
+            <li><div class="rounded-box"><b>Research Assistant Roles - LANA Corpus Processing</b></div>I worked on the the
                 Lancaster-Northern Arizona Corpus of American English <a href="https://twitter.com/LANA_corpus"
                     target="_blank">(LANA) </a> project in collaboration with colleagues at ASU. </li>
-            <li><div class="rounded-box"><b>Research Assistant Roles - Multimodal Corpora using CloudVision</b></div>I currently work on
+            <li><div class="rounded-box"><b>Research Assistant Roles - Multimodal Corpora using CloudVision</b></div>I worked on
                 a multimodal newspaper corpus compilation project with Professor Paul Baker. My role entails writing
                 custom Python scripts for collecting the corpus data from several UK newspaper websites, downloading and
                 processing the images, interfacing with Google CloudVision and Vertex AI for image tagging, and
