--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ Two core research questions guide this study: How can we transform archival data
                 </ul>
                 <section id="seven">
                 <hr class="rounded">
-                <h2>Data visualisation of attended events </h2>
+                <h2>Attended events (selection) </h2>
                 <iframe src="fun/conferencemap.html" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
               
             
