--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
                 <h4>CL2025 - 30.06.- 03.07.2025, Birmingham, UK</h4>
 
-                <p> I will present one full paper with Marc Alexander at CL2025 in Birmingham. </br></br>
+                <p> I have presented a full paper with Marc Alexander at CL2025 in Birmingham. </br></br>
 
                       </p>
                         
@@ -568,6 +568,7 @@ Two core research questions guide this study: How can we transform archival data
                       <li>UCREL NLP Summer School 2024 - 24-26 July 2024</li>
                       <li>Towards a National Collection Conference - 20-21 November 2024</li>
                       <li>BEYOND conference - 25-27 November 2024</li>
+                      <li>HLT Augsburg Retreat - 2-3 April 2025</li>
                 </ul>
                 <section id="seven">
                 <hr class="rounded">
